# VAI

./: .gitignore  CLAUDE.md  Multi-Agents.md  README.md  pyproject.toml
.claude/agents/: general-purpose.md
.claude/docs/: DESIGN.md  PLAN_matplotlib_japanese.md  fracture-baseline-design.md  investigation-20260319-coordinate.md  investigation-20260319-final-report.md  investigation-20260319-heatmap-analysis.md  loss-design-fix-plan.md  plan-line-loss-redesign.md  region-mask-plan.md  test-codex-output.md  unet-work-log.md
.claude/hooks/: agent-router.py  check-codex-after-plan.py  check-codex-before-write.py  lint-on-save.py  log-cli-tools.py  post-implementation-review.py  post-test-analysis.py  suggest-gemini-research.py
.claude/rules/: agent-workflow.md  codex-delegation.md  coding-principles.md  dev-environment.md  gemini-delegation.md  language.md  matplotlib-japanese.md  security.md  testing.md
.codex/: AGENTS.md  config.toml
.codex/skills/: design-tracker
.gemini/: GEMINI.md
Unet/: CLAUDE.md  eval_per_image.py  line_detection_moments.py  run_all_folds.py  test_one_sample.py  train_heat.py
Unet/annotation_tool/: index.html  server.py
Unet/debug/: analyze_vshape_correlation.py  debug_channel_heatmap.py  debug_worst_cases.py  eval_error_viz.py  eval_region_3d.py  eval_region_seg.py  eval_threshold_sweep.py  gt_show_flagged.py  gt_validation.py  viz_region_seg.py
Unet/line_only/: __init__.py  collect_angle_stats.py  line_detection.py  line_losses.py  line_metrics.py  predict_rsna.py  test_line_losses.py  train.py  train_heat.py  verify_seg_4region.py  visualize_angle_outliers.py  visualize_rsna.py
Unet/memo/: 4領域抽出学習設計案.md  multitask_architecture_spec.md  progress_report_2026-04-20.md  椎体ラベル条件付き U-Net 実装計画メモ.md
Unet/multitask/: train.py
Unet/preprocessing/: convert_to_png.py  generate_region_mask.py  pilot_region_mask.py  propagate_lines_z.py  qc_score.py
Unet/seg_only/: train.py
Unet/seg_sdf/: train.py
context/: Unet_plan.md
data_preprocessing/: README.md  convert_to_png.py  generate_annotation_data.py  generate_dataset.py  main_dataset.py  test_sample1.py
data_preprocessing/dicom_to_nifti/: create_csv.py  recognize_data.py
data_preprocessing/dms2niix/: output_nifti.py
data_preprocessing/learning_dataset/: propagate_lines_z.py
data_preprocessing/rsna_pipeline/: add_segmentation_planes.py  classifier_plane_sampling.py  classifier_plane_selection.py  classifier_planes.py  dicom_geometry.py  export_classifier_plane_pngs.py  mask_processing.py  orientation.py  plane_sampling.py  process_dataset.py  process_study.py  rsna_dicom_to_nifti.py  rsna_totalsegmentator.py  sdf_boundary_interpolation.py  segmentation_plane_sampling.py  totalsegmentator_runner.py  update_exclusions_from_region_qc.py
data_preprocessing/segmentation_dataset/: extract_slices.py  generate_region_mask.py  pilot_region_mask.py  preprocess_all.py  qc_score.py  rebuild_annotated_region_masks.py
data_preprocessing/tests/: test_propagate_lines_z.py
data_preprocessing/visualization/: visualize_gt_masks.py  visualize_polylines.py  visualize_region_masks.py
data_preprocessing/volume_prep/: add_fracture_labels.py  auto_tilt.py  generate_pre.py  phase0_generate_labels.py  segmentation_spine.py
docs/: README.md
docs/experiments/: README.md
docs/notes/: README.md
docs/progress/: 2026-03-10_weekly.md  README.md
docs/results/: README.md
learning/: train.py  train_bagonly.py
learning/bagonly_src/: losses.py  trainer.py
learning/src/: data_utils.py  dataset.py  model.py  trainer.py
learning/test/: test_data_utils.py  test_dataset.py  test_losses.py  test_metrics.py  test_model.py  test_training.py
learning/utils/: augment.py  losses.py  metrics.py  sampler.py  training.py
memo/data概要/: dicom_data_voxel_spacing.md  (+1 more)
(+261 files in other folders)
